Add notes